changed letter spacing and fixed #24

--- a/redpers.css
+++ b/redpers.css
@@ -24,6 +24,7 @@
 }
 
 body {
+ font-size: 16px;
  /* --- COLORS --- */
 
  /* -- PRIMARY COLOR (RED) -- */
@@ -54,27 +55,24 @@ body {
  --font-article: "Tiempos Text", sans-serif;
  --font-heading-important: "Tiempos Headline", sans-serif;
 
- /* DEFINE FONT-SIZES FOR TEXTS*/
+/* DEFINE FONT-SIZES FOR TEXTS */ 
+ --font-size-text: 1rem;
+ --font-size-meta: 0.6875rem; /* 11px ÷ 16 = 0.6875rem */
+ --font-size-menu: 0.75rem; /* 12px ÷ 16 = 0.75rem */
+ --font-size-intro: 1.3125rem; /* 21px ÷ 16 = 1.3125rem */
 
- --font-size-text: 12px;
- --font-size-meta: 11px;
- --font-size-intro: 21px;
-
- /* DEFINE FONT-SIZES FOR HEADERS*/
-
- --font-size-header-xxl: 48px;
- --font-size-header-xl: 38px;
- --font-size-header-l: 32px;
- --font-size-header-m: 20px;
- --font-size-header-s: 18px;
- --font-size-header-xs: 14px;
+/* DEFINE FONT-SIZES FOR HEADERS */ 
+ --font-size-header-xxl: 3rem; /* 48px ÷ 16 = 3rem */
+ --font-size-header-xl: 2.375rem; /* 38px ÷ 16 = 2.375rem */
+ --font-size-header-l: 2rem; /* 32px ÷ 16 = 2rem */
+ --font-size-header-m: 1.25rem; /* 20px ÷ 16 = 1.25rem */
+ --font-size-header-s: 1.125rem; /* 18px ÷ 16 = 1.125rem */
+ --font-size-header-xs: 0.875rem; /* 14px ÷ 16 = 0.875rem */
 
  /*  LETTER SPACINGS  */
 
- --letter-spacing-xs: -2%;
- --letter-spacing-s: -1%;
- --letter-spacing-m: 8%;
- --letter-spacing-l: 10%;
+ --letter-spacing-s: -1px;
+ --letter-spacing-l: 1px;
 
  /*  LINE HEIGHTS  */
 
@@ -155,7 +153,7 @@ h4,
  font-size: var(--font-size-header-xs);
  color: var(--black);
  font-weight: bold;
- letter-spacing: var(--letter-spacing-xs);
+ letter-spacing: var(--letter-spacing-s);
  line-height: var(--line-height-l);
 }
 
@@ -204,7 +202,7 @@ p a {
 .text_label_top {
  /*bovenkop*/
  font-weight: bold;
- letter-spacing: var(--letter-spacing-m);
+ letter-spacing: var(--letter-spacing-l);
 }
 
 .text_intro {
@@ -233,7 +231,7 @@ p a {
  justify-content: center;
  padding: 4px;
  font-size: 1rem;
- letter-spacing: 1px;
+ letter-spacing: var(--letter-spacing-l);
  line-height: 20px;
  display: flex;
  justify-content: space-between;
@@ -258,7 +256,7 @@ p a {
  color: var(--primary-color-accent);
  padding: 4px;
  font-size: 1rem;
- letter-spacing: 1px;
+ letter-spacing: var(--letter-spacing-l);
  line-height: 20px;
  display: flex;
  justify-content: space-between;
